--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,376 +1,584 @@
+:root {
+  --gradient: linear-gradient(to bottom, #111415, #363a47);
+  --primary-clr: rgb(56, 56, 56);
+  --secondary-clr: #89023E;
+  --accent-clr: #F37F81;
+  --white-clr: white;
+  --blacl-clr: black;
+
+  --h1-desktop: 46px;
+  --h1-mobile: 32px;
+  --h2-desktop: 41px;
+  --h2-mobile: 28px;
+  --h3-desktop: 30px;
+  --h3-mobile: 24px;
+  --h4-desktop: 20px;
+  --h4-mobile: 16px;
+  --font-size-body-desktop: 16px;
+  --font-size-body-mobile: 16px;
+
+  scroll-behavior: smooth;
+}
+
 body {
-  font-family: oswald;
-  background-color: rgb(211, 208, 208);
-  /* color: #ccc; */
-  padding: 0;
-  margin: 0;
-}
-
-/* HEADER ===============  */
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #89023e;
-  padding: 20px;
-  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
-}
-.logo {
-  border: 2px dotted;
-  border-radius: 50%;
-  width: 50px;
-  padding: 8px;
-  text-align: center;
-  color: white;
-}
-header nav ul {
-  list-style: none;
-  display: flex;
-  gap: 2rem;
-  text-transform: uppercase;
-  font-family: oswald;
-  font-weight: 700;
-  margin: 0;
-  padding: 0;
-  font-size: 16px;
-  
-}
-header nav ul li {
-  padding: 4px;
-  border-radius: 8px;
-}
-header nav ul a {
-text-decoration: none;
-color: white;
-}
-/* HERO SECTION ================= */
-
-.hero {
-  /* background-color: #e0e0e0; */
-  padding: 50px 20px;
-}
-
-.hero {
   position: relative;
-    height: 50vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
 }
-video {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: -10;
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
-.video-container {
+
+header {
+  height: 220vh;
+}
+.mainContent,
+.headerContent,
+.footerContent,
+.artist-reviews {
+  max-width: 1000px;
+  margin: auto;
+}
+
+h1,
+h2,
+h3 {
+  font-family: Oswald;
+  font-weight: normal;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+header .site-heading img {
+  width: 50px;
+  height: auto;
+}
+.headerContent .navbar {
+  position: relative;
+}
+
+nav {
+  display: none;
+}
+
+nav ul li a:hover {
+  color: var(--accent-clr);
+  border-bottom: 1px solid var(--accent-clr);
+  transition: all 0.5s;
+}
+
+.headerContent .navbar .search a,
+.headerContent .navbar .menuBtn a {
+  color: var(--white-clr);
+}
+
+.headerContent .navbar .menuBtn a {
+  color: var(--accent-clr);
+}
+
+header {
+  border-radius: 0 0 20px 20px;
+
+  padding: 1rem;
+  color: var(--white-clr);
+}
+
+header .headerContent .site-heading {
   display: grid;
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    z-index: 0;
-}
-.hero-text-container {
-  display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: end;
-    height: fit-content;
-    align-self: end;
-    .hero-text h3 {
-      grid-column: 1/2;
-      grid-row: 1/2;
-      align-self: flex-end;
-      font-size: 20px;
-
-
-    }
-    .hero-text p {
-      font-size: 18px;
-    }
-h3, p {
-  font-family: oswald;
-  color: white;
-  text-transform: uppercase;
-  align-self: end;
-
-}
-.hero-text{
-  background-color: rgba(0, 0, 0, 0.7);
-  border: 1px;
-  border-radius: 8px;
-  padding-left: 2rem;
-  padding-right: 2rem;
-  width: fit-content;
-  
-}
+  grid-template-columns: 1fr;
+  align-items: center;
 }
 
-
-.video-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  /* z-index: -1; */
+header .headerContent .site-heading img,
+header .headerContent .site-heading h1 {
+  grid-row: 1;
+  grid-column: 1;
 }
 
-
-.hero-search-bar {
-  width: 90%;
-  margin: 0 auto;
-  padding: 1rem 1rem;
-  background-color: #333;
-
-}
-
-.hero-search-bar input {
-  padding: 10px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 25px;
-  box-shadow: none;
-  width: 100%;
-  text-align: center;
-}
-
-
-.search-bar input {
-  width: 80%;
-  padding: 10px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-main {
-  /* display: grid; */
-  gap: 1rem;
-  background-color: #1b2021;
-}
-.book-create-container {
-  display: flex;
-  justify-content: 
-  space-around;
-  /* height: 16rem; */
-  padding: 40px 20px;
-  background-color: #111111;
-  margin: 20px 0;
-}
-
-.book-container, .create-container {
-  text-align: center;
-  width: 45%;
-  background-color: #f0f0f0;
-  padding: 20px;
-  justify-items: center;
-  border-radius: 8px;
-
-  background-image: url(https://picsum.photos/1200/500?random=1);
-}
-
-.book-text, .create-text {
-  display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 8rem;
-    align-content: space-between;
-    align-items: end;
-  
-    justify-items: end;
-    color: white
-    ;
-}
-
- button {
-  width: fit-content;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
-  background-color: #333;
-  color: #fff;
-}
-
-.signup-section {
-  text-align: center;
-  text-transform: uppercase;
-  color: white;
-}
-.sign-up, .sign-up a {
-  color: #f37f81;
-}
-.signup-section p {
-  margin: 10px 0;
-}
-/* FEATURED ARTIST ========== */
-.featured-artists {
-
-  display: grid;
-  justify-content: center;
-  padding: 0.2rem 8rem;
-  padding: 10px;
-  justify-self: center;
-  width: auto
-}
-.featured-artists h2 {
-  /* margin-bottom: 20px; */
+header .headerContent .site-heading h1 {
+  margin-left: 3.5rem;
+  align-items: center;
   font-size: 32px;
+  font-weight: normal;
   color: white;
 }
 
-.artist-card {
-  display: flex;
-  /* flex-wrap: row wrap; */
-  /* align-items: center; */
-  background-color: #f9f9f9;
-  width: fit-content;
-  padding: 20px;
-  border-radius: 8px;
-  margin-bottom: 20px;
+.headerContent h2 {
+  font-weight: normal;
 }
 
-.artist-card .artist-info {
-  padding-right: 20px;
-  
+.headerContent h2 span {
+  color: var(--accent-clr);
 }
 
-.artist-card .artist-info h3 {
-  margin: 0;
-}
-
-.artist-card .artist-info p {
-  margin: 5px 0;
-}
-.artist-button {
-  padding-bottom: 20px;
-}
-.artist-card button {
-  justify-self: end;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
-  background-color: #333;
-  color: #fff;
-}
-
-.artist-card .artist-image {
-  
-  justify-self: center;
-  border-radius: 10px;
- 
-}
-
-.featured-artists, .featured-videos {
-  max-width: auto;
-}
-/* FEATURED VIDEO =============== */
-.featured-videos {
+.headerContent {
   display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.headerContent .navbar {
+  display: flex;
   gap: 1rem;
-  grid-template-columns:1fr 1fr;
-  padding: 20px;
-  
+  color: #f37f81;
+  justify-content: end;
+  align-items: center;
 }
 
-.featured-videos h2 {
-  margin-bottom: 20px;
-  grid-column: 1/-1;
+a.explore {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
   justify-items: center;
-  font-size: 24px;
+  background-color: var(--secondary-clr);
+  width: 150px;
+  margin: auto;
+  color: var(--white-clr);
+  padding: .5rem;
+  border-radius: 25px;
 }
 
-.video-card-1 {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-  background-color: #f9f9f9;
-  border-radius: 8px;
+
+a.sign-up,
+.home-main .event-list .parties-list .details-btn a,
+.home-main .our-artists a,
+.home-main .contact-us .contact-form a {
+  background-color: var(--accent-clr);
+  color: var(--white-clr);
+  padding: .5rem;
+  border-radius: 25px;
+  display: block;
+  text-align: center;
+  width: 150px;
+  margin: auto;
+  margin-bottom: 8px;
+  margin-top: 8px;
 }
 
-.video-card-2 {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-  background-color: #f9f9f9;
-  border-radius: 8px;
-
-}
-.video-video {
-  border-radius: 10px;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.video-info {
-  padding: 20px;
-}
-
-.video-card .video-info h3 {
+.home-main .event-list .parties-list .details-btn a {
   margin: 0;
 }
 
+/* main---------------- */
 
-
-.video-card .video-icon i {
-  font-size: 24px;
+.home-main .header-content {
+  color: var(--white-clr);
 }
 
-/* FOOTER ========== */
-footer {
-  background-color: #89023e;
+.home-main .header-content h1 {
+  color: var(--accent-clr);
+  margin-bottom: 0;
+  font-size: clamp(36px, 2vw + 10px, 48px);
 }
-.footer-nav ul {
-  display: flex;
-  /* align-items: flex-end; */
-  list-style-type: none;
-  gap: 6rem;
-  justify-content: flex-end;
-  padding-left: 15rem;
-  padding-right: 10rem;
+
+.home-main .header-content h2 {
+  margin-top: 0;
 }
-.footer-nav ul a {
+
+.home-main .header-content h1 span {
+  color: var(--white-clr);
+}
+
+main .home-main>*:not(.home-main .experiences) {
+  padding: 2rem;
+}
+
+main .home-main {
+  top: 6rem;
+  position: absolute;
+  z-index: 100;
+}
+
+main .discover-wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+}
+
+main .discover-wrapper>*:not(h2) {
+  border-radius: 10px;
+
+  box-sizing: border-box;
+  padding: 1rem;
+  text-align: center;
+  height: 250px;
+  max-width: 220px;
+  align-content: center;
+  align-items: center;
+  color: var(--white-clr);
+}
+
+main .discover-wrapper img {
+  width: 80px;
+  margin: auto;
+}
+
+main .discover-wrapper h2 {
+  grid-column: span 2;
+  text-align: left;
+  color: var(--accent-clr);
+}
+
+main .discover-wrapper p {
+  margin: 0;
+}
+
+main .discover-wrapper .discover {
+  background-color: #F37F9A;
+}
+
+main .discover-wrapper .book {
+  background-color: #F37F81;
+}
+
+main .discover-wrapper .organise {
+  background-color: var(--secondary-clr);
+}
+
+main .discover-wrapper .enjoy {
+  background-color: #FF3465;
+}
+
+main .event-list h2 {
+  color: var(--white-clr);
+  text-align: center;
+}
+
+main .event-list h2 span {
+  color: var(--accent-clr);
+}
+
+.home-main .event-list .parties-list {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+  color: var(--white-clr);
+  justify-content: left;
+  justify-items: left;
+  margin-bottom: 1rem;
+}
+
+.home-main .event-list .parties-list .overlay {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  /* height: 408px; */
+  background: linear-gradient(to bottom, #ff346376, #1b202155);
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 0;
+  border-radius: 20px;
 }
 
-@media screen and (max-width: 760px) {
-.body {
-  width: auto;
+.home-main .event-list .parties-list .party-info {
+  position: absolute;
+  bottom: .5rem;
+  font-size: var(--font-size-body-mobile);
+  padding: 1.5rem;
 }
-  main {
-    display: grid;
+
+.home-main .event-list .parties-list .party-info h3 {
+  font-size: var(--h3-mobile);
+  font-weight: 500;
+}
+
+/* Experiences--------------- */
+.home-main .experiences {
+  text-align: center;
+  margin-top: 3.5rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.home-main .experiences h2 {
+  grid-column: 1/-1;
+}
+
+.home-main .experiences p {
+  font-family: oswald;
+}
+
+.home-main .experiences h2 span,
+.home-main .experiences p span,
+.home-main .our-clients h2 {
+  color: var(--accent-clr);
+}
+
+/* Our artists------------------- */
+
+.home-main .our-artists {
+  background: linear-gradient(to right, #30343F, #7E88A5);
+  margin: 0;
+  margin-top: 3rem;
+  color: var(--white-clr);
+}
+
+.home-main .our-artists a {
+  margin-left: 0;
+  color: var(--blacl-clr);
+}
+
+.home-main .our-artists img {
+  margin-bottom: -1.99rem;
+  margin-top: -3rem;
+}
+
+.home-main .our-artists h2 {
+  font-size: var(--h2-mobile);
+}
+
+.home-main .our-artists p {
+  font-size: var(--font-size-body-mobile);
+}
+
+
+/* our clients--------------- */
+.home-main .our-clients {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+}
+
+.home-main .our-clients h2 {
+  grid-column: 1/-1;
+}
+
+.home-main .our-clients img:last-child {
+  grid-column: 1/-1;
+  
+}
+
+/* testimonial----------------- */
+main .testimonial {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+}
+
+main .testimonial img {
+  background-color: var(--accent-clr);
+  padding-top: 1rem;
+  margin: auto;
+  border-radius: 25px;
+}
+
+main .testimonial p {
+  margin-top: 0;
+}
+
+main .testimonial blockquote {
+  font-family: oswald;
+  color: var(--accent-clr);
+  margin: 0;
+  font-size: var(--h3-mobile);
+}
+
+main .testimonial .icons-grp {
+  color: var(--secondary-clr);
+}
+
+/* contact------------------- */
+.home-main .contact-us {
+  color: var(--white-clr);
+}
+
+.home-main .contact-us .contact-info {
+  background-color: var(--accent-clr);
+  padding: 3rem;
+  text-align: center;
+  border-radius: 25px 25px 0 0;
+  height: 505px;
+  font-size: 18px;
+  align-content: center;
+  align-items: center;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-evenly;
+}
+
+.home-main .contact-us .contact-info h3 {
+  font-size: var(--h3-mobile);
+}
+
+.home-main .contact-us .contact-info ul {
+  margin-top: 1.5rem;
+}
+
+.home-main .contact-us .contact-info ul li {
+  font-weight: bold;
+}
+
+.home-main .contact-us .contact-form {
+  background-color: var(--secondary-clr);
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-content: center;
+  justify-items: center;
+  border-radius: 0 0 25px 25px;
+}
+
+.home-main .contact-us h3 {
+  margin-top: 0;
+  font-family: oswald;
+  font-size: var(--h3-mobile);
+}
+
+.home-main .contact-us .contact-form {
+  color: var(--white-clr);
+}
+
+.home-main .contact-us .contact-form form input {
+  width: 300px;
+  height: 48px;
+  border-radius: 15px;
+  border: transparent;
+}
+
+.home-main .contact-us .contact-form form .contact-inputs {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin-top: 1rem;
+}
+
+.home-main .contact-us .contact-form form a {
+  margin-right: 0;
+  margin-top: 2rem;
+}
+
+/* footer----------------------- */
+
+footer {
+  bottom: 0;
+  margin-top: 303rem;
+}
+
+
+/* for desktop--------------- */
+
+
+@media screen and (min-width: 700px) {
+
+  /* a.book-artist,
+  a.check {
+      width: 140px;
+  } */
+  header{
+      height: 150vh;
+  }
+  main .home-main{
+      max-width: 1000px;
+    margin: auto;
   }
 
-  .hero-text h3 {
-    display: none;
+  .home-main .header-content {
+      display: grid;
+      grid-template-columns: auto auto;
+      grid-template-rows: repeat(3, auto);
   }
-  .featured-artists, .featured-videos {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 0.5rem;
-    background-color: #333;
-    justify-content: center;
-  }
-  footer {
-    display: none;
-  }
-  .footer-nav {
-    display: flex;
-  }
-  .footer-nav ul {
-    display: flex;
-    flex-wrap: row wrap;
-    justify-content: center;
 
-    display: flex;
-    list-style-type: none;
+  .home-main .header-content h1,
+  .home-main .header-content h2 {
+      grid-column: 1/3;
+      grid-row: 1;
+      align-content: end;
   }
+  .home-main .header-content h1{
+      margin-bottom: 5rem;
+  }
+
+  .home-main .header-content h2 {
+      margin-top: 4rem;
+      font-size: var(--h2-desktop);
+  }
+
+  .home-main .header-content p {
+      grid-column: 1;
+      grid-row: 2;
+  }
+  .home-main .header-content  img{
+      grid-row: 1/-1;
+  }
+  .home-main .header-content a{
+      grid-row: 3;
+      margin: 0;
+      padding: 0;
+      height: 38.4px;
+      display: grid;
+      text-align: center;
+      align-items: center;
+  }
+
+  .home-main .discover-wrapper{
+      display: grid;
+      grid-template-columns: repeat(4,1fr);
+  }
+  .home-main .discover-wrapper h2{
+      grid-column: 1/-1;
+  }
+
+  .home-main .event-list{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 1rem;
+      max-width: 800px;
+  }
+  .home-main .event-list h2{
+      grid-column: 1/-1;
+  }
+  .home-main .event-list .parties-list{
+      margin-bottom: 0;
+  }
+  .home-main .experiences{
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+  }
+  .home-main .our-artists{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+  }
+
+ .home-main .our-clients{
+  grid-template-columns: repeat(5, 1fr);
+ }
+ .home-main .our-clients img:last-child{
+  grid-column: 5;
+  object-fit: scale-down;
+ }
+.home-main .testimonial{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.home-main .testimonial .icons-grp, .home-main .testimonial p,.home-main .testimonial blockquote {
+  grid-column: 2;
+}
+.home-main .testimonial img{
+  grid-row: span 3;
+  grid-column: 1;
+}
+.home-main .contact-us{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.home-main .contact-us .contact-info{
+  border-radius: 25px 0 0 25px;
+}
+.home-main .contact-us .contact-form{
+border-radius: 0 25px 25px 0;
+}
+.home-main .contact-us .contact-form form{
+  margin: auto;
+}
 }
