--- a/css/artist-portfolio.css
+++ b/css/artist-portfolio.css
@@ -206,7 +206,6 @@ main .mainContent .artist-perf a {
     width: 250px;
     margin: auto;
     margin-bottom: 8px;
-    margin-top: 2rem;
 }
 
 .mainContent .artist-work .images {
@@ -510,6 +509,54 @@ main .calendar-main .table-content {
     padding: .5rem 1rem;
 }
 
+.mainContent .artist-perf {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+}
+
+ /* Pop-up ----------------- */
+ .popup {
+    display: none; /* Hide the pop-up by default */
+    position: fixed; /* Fixed position to overlay the page */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5); /* Semi-transparent background */
+    z-index: 999; /* Higher z-index to overlay everything */
+  }
+  
+  .popup-content {
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    max-width: 80%;
+    max-height: 80%;
+    min-width: 50%;
+    overflow: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+  }
+  
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 24px;
+    cursor: pointer;
+  }
+  .event-data {
+    display: grid;
+    grid-template-columns: 20% 1fr;
+    gap: 0.75rem;
+    text-align: center;
+    margin-top: 5rem;
+}
+
 
 @media screen and (min-width: 900px) {
     .headerContent .navbar .menuBtn {
@@ -560,8 +607,7 @@ main .calendar-main .table-content {
 
     .mainContent .artist-perf {
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 1rem;
+        grid-template-columns: 1fr;
     }
 
     .mainContent .artist-perf h3,
@@ -595,48 +641,6 @@ main .calendar-main .table-content {
     main .artist-reviews .review-list {
         margin: 0;
         width: 100%;
-    }
-
-    /* Pop-up ----------------- */
-    .popup {
-        display: none; /* Hide the pop-up by default */
-        position: fixed; /* Fixed position to overlay the page */
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0,0,0,0.5); /* Semi-transparent background */
-        z-index: 999; /* Higher z-index to overlay everything */
-      }
-      
-      .popup-content {
-        background-color: white;
-        border-radius: 5px;
-        box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        max-width: 80%;
-        max-height: 80%;
-        min-width: 50%;
-        overflow: auto;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        padding: 20px;
-      }
-      
-      .close {
-        position: absolute;
-        top: 10px;
-        right: 15px;
-        font-size: 24px;
-        cursor: pointer;
-      }
-      .event-data {
-        display: grid;
-        grid-template-columns: 20% 1fr;
-        gap: 0.75rem;
-        text-align: center;
-        margin-top: 5rem;
     }
 
     .inputField {
