--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,13 +1,28 @@
+:root{
+    --gradient: linear-gradient(to bottom, #111415, #363a47);
+    --primary-clr: rgb(56, 56, 56);
+    --secondary-clr: #89023E;
+    --accent-clr: #F37F81;
+    --white-clr: white;
+    --blacl-clr: black;
+}
+
 body {
     margin: 0;
     padding: 0;
+    display: flex;
+    min-height: 100vh;
+    flex-flow: column nowrap;
 }
 
 
 main {
     max-width: 1200px;
+    min-width: 60%;
     margin: auto;
     text-align: center;
+    flex: 1;
+    padding: 1rem;
 }
 
 #logoutBtn {
@@ -35,17 +50,17 @@ main {
 /* ============================= */
 /* Add styles for the search bar */
 .search-container {
-    margin-bottom: 20px;
-    text-align: center;
+    display: flex;
+    flex-flow: row wrap;
+    gap: 0.5rem;
+    margin-top: 2rem;
 }
 
 .search-container input[type=text] {
-    padding: 8px;
-    width: 60%;
+    flex: 1;
     border: 1px solid #ccc;
     border-radius: 4px;
-    box-sizing: border-box;
-    font-size: 16px;
+    padding: 8px;
 }
 
 .search-container button {
@@ -61,4 +76,25 @@ main {
 
 .search-container button:hover {
     background: #45a049;
+}
+
+.search-suggestions ul {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 0.75rem;
+    align-items: center;
+    margin: 0 2rem;
+    justify-content: center;
+}
+
+.search-suggestions ul li {
+    border: 1px solid black;
+    padding: 0.5rem 1rem;
+    border-radius: 30px;
+}
+
+.search-suggestions ul li:hover {
+    background-color: var(--secondary-clr);
+    color: white;
+    cursor: pointer;
 }
