--- a/css/bookings.css
+++ b/css/bookings.css
@@ -1,29 +1,262 @@
-/* by Soud */
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Oswald:wght@200..700&display=swap');
+
+:root {
+    --gradient: linear-gradient(to bottom, #111415, #363a47);
+    --primary-clr: rgb(56, 56, 56);
+    --secondary-clr: #89023E;
+    --accent-clr: #F37F81;
+    --white-clr: white;
+    --blacl-clr: black;
+
+    --h1-desktop: 46px;
+    --h1-mobile: 32px;
+    --h2-desktop: 41px;
+    --h2-mobile: 28px;
+    --h3-desktop: 30px;
+    --h3-mobile: 24px;
+    --h4-desktop: 20px;
+    --h4-mobile: 16px;
+    --font-size-body-desktop: 16px;
+    --font-size-body-mobile: 16px;
+
+    scroll-behavior: smooth;
+}
 
 body {
+    font-family: 'Nunito Sans';
     margin: 0;
+    line-height: 1.4;
+}
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    width: 100px;
+    height: auto;
 }
 
-/* Header */
-/* header {
-    margin: 0 2rem;
-    display: flex;
+.mainContent,
+.headerContent,
+.footerContent,
+.artist-reviews {
+    max-width: 1000px;
+    margin: auto;
+}
+
+h1,
+h2,
+h3 {
+    font-family: Oswald;
+    font-weight: normal;
+}
+h2{
+    color: var(--accent-clr);
+}
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+header .site-heading img {
+    width: 50px;
+    height: auto;
+}
+
+nav {
+    display: none;
+}
+
+.headerContent .navbar .search a,
+.headerContent .navbar .menuBtn a {
+    color: var(--white-clr);
+}
+
+.headerContent .navbar .menuBtn a {
+    color: var(--accent-clr);
+}
+
+header {
+    background: var(--gradient);
+    border-radius: 0 0 20px 20px;
+
+    padding: 1rem;
+    color: var(--white-clr);
+}
+
+header .headerContent .site-heading {
+    display: grid;
+    grid-template-columns: 1fr;
     align-items: center;
-    justify-content: space-between;
 }
 
-header nav ul {
-    list-style-type: none;
-} */
+header .headerContent .site-heading img,
+header .headerContent .site-heading h1 {
+    grid-row: 1;
+    grid-column: 1;
+}
+
+header .headerContent .site-heading h1 {
+    margin-left: 3.5rem;
+    align-items: center;
+    font-size: 1.5rem;
+    font-weight: normal;
+}
+
+.headerContent h2 {
+    font-weight: normal;
+}
+
+.headerContent h2 span {
+    color: var(--accent-clr);
+}
+
+.headerContent {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.headerContent .navbar {
+    display: flex;
+    gap: 1rem;
+    justify-content: end;
+    align-items: center;
+}
+
+nav ul li a:hover {
+    color: var(--accent-clr);
+    border-bottom: 1px solid var(--accent-clr);
+    transition: all .5s;
+}
+
+@media screen and (min-width: 700px) {
+    .headerContent .navbar .menuBtn {
+        display: none;
+    }
+
+    nav {
+        display: block;
+    }
+
+    .headerContent .site-heading,
+    .headerContent .navbar {
+        grid-column: 1/span 2;
+        grid-row: 1/span 2;
+    }
+
+    nav ul li {
+        display: inline;
+    }
+
+    nav ul li a {
+        color: var(--white-clr);
+        margin-left: 1rem;
+    }
+}
+
+footer {
+    background: linear-gradient(to bottom, #111415, #363a47);
+    color: var(--white-clr);
+    padding: 1rem;
+}
+
+.footerContent {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 2rem;
+}
+
+.footerContent a {
+    color: var(--white-clr);
+}
+
+.footerContent .footer-head {
+    text-align: center;
+    grid-column: span 2;
+}
+
+.footerContent .footer-head img {
+    margin: auto;
+    width: 70px;
+}
+
+.footerContent .footer-head .icons ul li {
+    display: inline;
+    margin: .3rem;
+}
+
+.footerContent .copyright {
+    grid-column: span 2;
+    text-align: center;
+}
+
+.footerContent .quick-links p,
+.footerContent .contact-us p {
+    font-weight: 700;
+}
+
+.footerContent .quick-links ul li,
+.footerContent .contact-us ul li {
+    margin-bottom: .5rem;
+}
+
+
+
+
+@media screen and (min-width:700px) {
+
+
+
+    footer .footerContent {
+        grid-template-columns: repeat(4, 1fr);
+        gap: 2rem;
+    }
+
+    footer .footerContent .footer-head {
+        text-align: left;
+        display: grid;
+        gap: 1rem;
+    }
+
+    footer .footerContent .footer-head img {
+        margin: 0;
+
+    }
+
+    footer .footerContent .copyright {
+        grid-column: 1/ span 4;
+        text-align: center;
+
+        margin-top: 2rem;
+    }
+}
+
 
 
 /* css for booking-content-wrapper */
+
 .booking-content-wrapper {
-    background-color: bisque;
+    /* background-color: var(--white-clr); */
     min-height: 400px;
     display: grid;
     padding: 1rem;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr;
+    margin: 2rem;
+    /* border: 1px solid black; */
+    border-radius: 15px;
+    box-shadow: 2px 2px 4px  rgb(196, 194, 194, .9);
+    padding: 1rem;
 }
 
 .myBooking-div {
@@ -59,7 +292,7 @@ header nav ul {
 .booking-item {
     max-height: 250px;
     font-size: 14px;
-    background-color: rgb(160, 214, 160);
+    background-color: var();
     border: 1px solid #ccc;
     border-radius: 4px;
     padding: 10px;
@@ -100,7 +333,7 @@ header nav ul {
 
 .search-container button {
     padding: 8px 12px;
-    background: #4CAF50;
+    background: var(--accent-clr);
     color: white;
     border: none;
     border-radius: 4px;
@@ -110,20 +343,20 @@ header nav ul {
 }
 
 .search-container button:hover {
-    background: #45a049;
+    background: #f37f81b7;
 }
 
 #accept-request, #decline-request {
     padding: 10px 2rem;
     border: 1px solid white;
-    background-color: #45a049;
+    background-color: var(--accent-clr);
     border-radius: 10px;
     color: white;
     cursor: pointer;
 }
 
 #decline-request {
-    background-color: rgb(165, 47, 47);
+    background-color: var(--secondary-clr);
 }
 
 .response-div {
@@ -147,8 +380,15 @@ header nav ul {
 }
 
 /* Responsive adjustments for search bar */
-@media (max-width: 600px) {
+@media (min-width: 700px) {
+
     .search-container input[type=text] {
         width: 100%;
+    }
+
+    .booking-content-wrapper{
+        max-width: 1000px;
+    margin: 2rem auto;
+    grid-template-columns: 1fr 1fr;
     }
 }
