--- a/css/login.css
+++ b/css/login.css
@@ -99,9 +99,9 @@ main {
 } */
 
 img {
-max-width: 100%;
-height: auto;
-display: block;
+    max-width: 100%;
+    height: auto;
+    display: block;
 }
 
 :root {
@@ -131,6 +131,7 @@ body {
     margin: 0;
     line-height: 1.4;
 }
+
 img {
     max-width: 100%;
     height: auto;
@@ -153,7 +154,9 @@ h3 {
     font-family: Oswald;
     font-weight: normal;
 }
-
+h2{
+    color: var(--accent-clr);
+}
 img {
     max-width: 100%;
     height: auto;
@@ -341,5 +344,69 @@ footer {
         text-align: center;
 
         margin-top: 2rem;
+    }
+}
+
+
+/* labels----------- */
+.login-wrapper .logo h3 {
+    text-align: center;
+}
+
+main .login-wrapper {
+    margin: 1.5rem;
+    padding: 1rem;
+    /* border: 1px solid rgb(103, 103, 103); */
+    border-radius: 15px;
+    box-shadow: 2px 2px 4px rgba(174, 173, 173, 0.6);
+
+
+}
+
+main .login-wrapper .labels {
+    display: grid;
+}
+
+main .login-wrapper .labels input {
+    width: 327px;
+    border: 1px solid black;
+    border-radius: 25px;
+    padding: 1rem;
+    margin: 1rem auto;
+}
+
+.login-wrapper .buttons {
+    /* margin: auto; */
+    text-align: center;
+    margin: 1rem auto;
+    display: grid;
+    justify-content: center;
+    gap: 8px;
+}
+
+
+.login-wrapper .buttons #loginBtn,
+.login-wrapper .buttons #signupBtn {
+    background-color: var(--accent-clr);
+    color: var(--white-clr);
+    /* display: flex; */
+    width: 250px;
+    padding: .5rem;
+    border-radius: 25px;
+    border: transparent;
+    cursor: pointer;
+}
+.login-wrapper .buttons #signupBtn {
+    background-color: var(--secondary-clr);
+}
+
+@media screen and (min-width:700px) {
+    main .login-wrapper {
+        max-width: 800px;
+        margin: 2rem auto;
+    }
+
+    main .login-wrapper .labels input {
+        width: 694px;
     }
 }
