--- a/css/signup.css
+++ b/css/signup.css
@@ -136,7 +136,9 @@ h3 {
     font-family: Oswald;
     font-weight: normal;
 }
-
+h2{
+    color: var(--accent-clr);
+}
 img {
     max-width: 100%;
     height: auto;
@@ -329,7 +331,7 @@ footer {
 
 /* labels ------------------------ */
 
-#signupForm .logo h2{
+#signupForm .logo h3{
     text-align: center;
 }
 
@@ -381,7 +383,7 @@ cursor: pointer;
 
 @media screen and (min-width:700px) {
     main #signupForm {
-        max-width: 1000px;
+        max-width: 800px;
         margin: 2rem auto;
     }
 
